2005-06-21  Philippe Gerum  <rpm@xenomai.org>

	* skins/uvm/module.c (__fusion_skin_exit): Detach from the fusion
	core.

	* nucleus/pod.c (xnpod_suspend_thread): Force any relaxed shadow
	thread in the process of being suspended to harden itself. We do
	this by sending the thread SIGSYS, which is trapped and causes the
	proper migration into each interface library. By doing so, we make
	sure to stop the target thread properly by moving it back under
	the control of the nucleus. This solves a bad scheduling issue
	with the UVM support.

2005-06-20  Philippe Gerum  <rpm@xenomai.org>

	* arch/i386/patches: Upgrade to r11 final.

2005-06-20  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* skins/posix/mq.c: Rework creation and deletion of message queues
	to avoid holding the nucleus lock while calling xnarch allocation
	functions.
	Add EXPORT_SYMBOL for all mq functions.

2005-06-19  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/pod.c (xnpod_shutdown): Replace the flawed shutdown
	interposition handler by a reference count for handling multiple
	skin attachments.

2005-06-18  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* skins/posix/posix.h: Added initial support for message queues.

2005-06-12  Philippe Gerum  <rpm@xenomai.org>

 	* RELEASE: fusion-0.8 (Time Machine)

2005-06-10  Philippe Gerum  <rpm@xenomai.org>

	* skins/posix/thread.c: Add pthread_set_mode_np() for changing the
	shield state and arming the switch trap signal.

	* nucleus/pod.c: Survey page faults over shadow contexts to track
	down memory locking problems. /proc/rtai/stats displays the new PF
	counter accordingly.

2005-06-10  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* skins/posix/syscall.c (__pthread_create): Destroy thread when
	mapping fails.

	* skins/posix/thread.c (thread_delete_hook): As required by the
	specification, postpone marking the thread as detached until after
	we are sure that a joiner was not canceled.
