@@ -1,7 +1,7 @@
 /*
  * Jenkins hash support, lifted from the Linux kernel from
- * linux/include/linux/jhash.h, and tweaked for user-space.  We use it
- * to index RTAI/fusion shadow TCBs on pthread descriptor addresses.
+ * linux/include/linux/jhash.h.  We use it to index RTAI/fusion shadow
+ * TCBs on pthread descriptor addresses.
  *
  * Original credits:
  *
@@ -25,8 +25,6 @@
 #ifndef _RTAI_POSIX_JHASH_H
 #define _RTAI_POSIX_JHASH_H
 
-#include <stdint.h>
-
 /* NOTE: Arguments are modified. */
 #define __jhash_mix(a, b, c) \
 { \
@@ -47,9 +45,9 @@
 /* A special optimized version that handles 1 or more of u32s.
  * The length parameter here is the number of u32s in the key.
  */
-static inline uint32_t jhash2(const uint32_t *k, uint32_t length, uint32_t initval)
+static inline u32 jhash2(const u32 *k, u32 length, u32 initval)
 {
-	uint32_t a, b, c, len;
+	u32 a, b, c, len;
 
 	a = b = JHASH_GOLDEN_RATIO;
 	c = initval;
