@@ -13,8 +13,7 @@ libpthread_rt_la_SOURCES = \
 	semaphore.c \
 	clock.c \
 	mutex.c \
-	cond.c \
-	jhash.h
+	cond.c
 
 include_HEADERS = \
 	pthread.h \
